[package]
name = "tracing_simplev2"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "grpc-server"
path = "src/server.rs"
bench = false

[[bin]]
name = "grpc-client"
path = "src/client.rs"
bench = false

[dependencies]
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.31", features = ["trace"] }
tracing-opentelemetry = "0.32.0"
tracing = "0.1.41"
tokio = { version = "1.48.0", features = ["full"] }
tonic = { version = "0.14.2", features = ["server", "codegen", "channel", "router"] }
tracing-subscriber = {  version = "0.3.20", features = ["env-filter", "std"] }
prost = "0.14.1"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
